Home section and nav bar

--- a/index.html
+++ b/index.html
@@ -5,14 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyOnlineMeal</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="./images/logo.png" alt="logo">
+            <img src="./images/logo.png" alt="MyOnlineMeal">
         </div>
+
+        <ul>
+            <li class="item"><a href="#">Home</a></li>
+            <li class="item"><a href="#">Services</a></li>
+            <li class="item"><a href="#">About Us</a></li>
+            <li class="item"><a href="#">Contact Us</a></li>
+        </ul>
     </nav>
+
+    <section id="home">
+        <h1 class="h-primary">Welcome to MyOnlineMeal</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, debitis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipi</p>
+        <button class="btn">Order Now</button>
+    </section>
+    
+    <section class="services-container">
+        <h1 class="h-primary center">Our Serivces</h1>
+        <div id="services">
+            <div class="box">
+                <img src="images/1.png">
+                <h2 class="h-secondary center">Food Ordering</h2>
+                <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus sapiente quod, ipsum autem reiciendis veritatis quo fugiat beatae. Animi ipsa in laboriosam maiores nobis cum quisquam voluptates est vero esse soluta, provident modi!</p>
+            </div>
+
+            <div class="box">
+                <img src="images/1.png">
+                <h2 class="h-secondary center">Food Ordering</h2>
+                <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus sapiente quod, ipsum autem reiciendis veritatis quo fugiat beatae. Animi ipsa in laboriosam maiores nobis cum quisquam voluptates est vero esse soluta, provident modi!</p>
+            </div>
+
+            <div class="box">
+                <img src="images/1.png">
+                <h2 class="h-secondary center">Food Ordering</h2>
+                <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus sapiente quod, ipsum autem reiciendis veritatis quo fugiat beatae. Animi ipsa in laboriosam maiores nobis cum quisquam voluptates est vero esse soluta, provident modi!</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
