Working with OUR SERVICE AND OUR CLIENTS section

--- a/index.html
+++ b/index.html
@@ -39,16 +39,37 @@
             </div>
 
             <div class="box">
-                <img src="images/1.png">
-                <h2 class="h-secondary center">Food Ordering</h2>
+                <img src="images/2.jpg">
+                <h2 class="h-secondary center">All varities</h2>
                 <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus sapiente quod, ipsum autem reiciendis veritatis quo fugiat beatae. Animi ipsa in laboriosam maiores nobis cum quisquam voluptates est vero esse soluta, provident modi!</p>
             </div>
 
             <div class="box">
-                <img src="images/1.png">
-                <h2 class="h-secondary center">Food Ordering</h2>
+                <img src="images/3.jpg">
+                <h2 class="h-secondary center">Fast Delivery</h2>
                 <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus sapiente quod, ipsum autem reiciendis veritatis quo fugiat beatae. Animi ipsa in laboriosam maiores nobis cum quisquam voluptates est vero esse soluta, provident modi!</p>
             </div>
+        </div>
+    </section>
+    <section id="client-section">
+        <h1 class="h-primary center">Our Clients</h1>
+        <div id="clients">
+            <div class="client-item">
+                <img src="images/apple.png" alt="Our Client">
+            </div>
+
+            <div class="client-item">
+                <img src="images/seo.png" alt="Our Client">
+            </div>
+
+            <div class="client-item">
+                <img src="images/arrow.png" alt="Our Client">
+            </div>
+
+            <div class="client-item">
+                <img src="images/watch.png" alt="Our Client">
+            </div>
+
         </div>
     </section>
 
