--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                 <img src="images/watch.png" alt="Our Client">
             </div>
 
+            <div class="client-item">
+                <img src="images/apple.png" alt="Our Client">
+            </div>
+
         </div>
     </section>
 
