--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
         </div>
     </section>
 
+    <section id="contact">
+        <h1 class="h-primary center">Contact Us</h1>
+        <div id="contact-box">
+            <form>
+                <div class="gorm-gorup">
+                    <label for="name">Name:</label>
+                    <input type="text" name="name" id="name" placeholder="Enter your name">
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="center">
+            Copyright &copy; www.MyOnlineMeal.com - All rights reserved
+        </div>
+    </footer>
+
 </body>
 
 </html>
