completed making website

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <div class="box">
                 <img src="images/1.png">
                 <h2 class="h-secondary center">Food Ordering</h2>
-                <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus sapiente quod, ipsum autem reiciendis veritatis quo fugiat beatae. Animi ipsa in laboriosam maiores nobis cum quisquam voluptates est vero esse soluta, provident modi!</p>
+                <p class="center">In the modern age, food ordering has become an integral part of the food industry. With the ability to order online or via an app, customers can save time and enjoy their favorite meals at their convenience. It's a win-win for both customers and restaurants.</p>
             </div>
 
             <div class="box">
                 <img src="images/2.jpg">
                 <h2 class="h-secondary center">All varities</h2>
-                <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus sapiente quod, ipsum autem reiciendis veritatis quo fugiat beatae. Animi ipsa in laboriosam maiores nobis cum quisquam voluptates est vero esse soluta, provident modi!</p>
+                <p class="center">With globalization and cultural exchange, there's an endless variety of food to choose from. From fusion cuisine to traditional dishes, the options are virtually limitless. With the availability of diverse ingredients, the world of food is continuously expanding.</p>
             </div>
 
             <div class="box">
                 <img src="images/3.jpg">
                 <h2 class="h-secondary center">Fast Delivery</h2>
-                <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus sapiente quod, ipsum autem reiciendis veritatis quo fugiat beatae. Animi ipsa in laboriosam maiores nobis cum quisquam voluptates est vero esse soluta, provident modi!</p>
+                <p class="center">For those with a fast-paced lifestyle, fast food delivery can be a lifesaver. With the option to order from home or work, customers can enjoy a quick meal without sacrificing quality. With the growth of food delivery services, fast food has never been more convenient.</p>
             </div>
         </div>
     </section>
@@ -81,9 +81,24 @@
         <h1 class="h-primary center">Contact Us</h1>
         <div id="contact-box">
             <form>
-                <div class="gorm-gorup">
+                <div class="form-gorup">
                     <label for="name">Name:</label>
                     <input type="text" name="name" id="name" placeholder="Enter your name">
+                </div>
+
+                <div class="form-gorup">
+                    <label for="email">Email:</label>
+                    <input type="email" name="name" id="email" placeholder="Enter your E-mail">
+                </div>
+
+                <div class="form-gorup">
+                    <label for="phone">Phone:</label>
+                    <input type="phone" name="name" id="phone" placeholder="Enter your phone">
+                </div>
+
+                <div class="form-gorup">
+                    <label for="message">Message:</label>
+                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
                 </div>
             </form>
         </div>
