Getting ready for making responsive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyOnlineMeal</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="./css/phone.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipi</p>
         <button class="btn">Order Now</button>
     </section>
-    
+    <hr>
     <section class="services-container">
         <h1 class="h-primary center">Our Serivces</h1>
         <div id="services">
@@ -51,6 +52,7 @@
             </div>
         </div>
     </section>
+    <hr>
     <section id="client-section">
         <h1 class="h-primary center">Our Clients</h1>
         <div id="clients">
@@ -103,6 +105,8 @@
             </form>
         </div>
     </section>
+
+    <hr>
 
     <footer>
         <div class="center">
