made home and navbar responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyOnlineMeal</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="./css/phone.css">
+    <link rel="stylesheet" media="screen and (max-width: 900px)" href="./css/phone.css">
 </head>
 
 <body>
@@ -25,8 +25,8 @@
 
     <section id="home">
         <h1 class="h-primary">Welcome to MyOnlineMeal</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, debitis!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipi</p>
+        <p>Welcome to our online meal selection - where you can find delicious dishes.</p>
+        <p>You will be satisfied.</p>
         <button class="btn">Order Now</button>
     </section>
     <hr>
