--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
 
         <ul>
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">Services</a></li>
-            <li class="item"><a href="#">About Us</a></li>
-            <li class="item"><a href="#">Contact Us</a></li>
+            <li class="item"><a href="#home">Home</a></li>
+            <li class="item"><a href="#services-container">Services</a></li>
+            <li class="item"><a href="#client-section">Our Clients</a></li>
+            <li class="item"><a href="#contact">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -30,7 +30,7 @@
         <button class="btn">Order Now</button>
     </section>
     <hr>
-    <section class="services-container">
+    <section id="services-container">
         <h1 class="h-primary center">Our Serivces</h1>
         <div id="services">
             <div class="box">
